--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,12 @@ form h4 {
   color: white;
   background-color: black;
 }
+
+btn {
+  width: 300px;
+  padding: 0.25rem;
+  margin: 0.5rem 0;
+  color: white;
+  background-color: red;
+  cursor: pointer;
+}
